--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jack Collins</title>
+    <title>Jack Collins Resume</title>
+    
 </head>
 <body>
-    
+    <h1><strong>Jack Collins</strong></h1><br>
+    <p><em>I am a top of the line software engineer will go to great ends to get the job done. I am a team player, and love hel.</em></p>
 </body>
 </html>
