--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1><strong>Jack Collins</strong></h1><br>
-    <p><em>I am a top of the line software engineer will go to great ends to get the job done. I am a team player, and love hel.</em></p>
+    <p><em>I am a top of the line software engineer will go to great ends to get the job done. I am good when working in a team, and 
+        enjoy working on group projects. When I feel like I am helping to make a diffrence in the world.</em></p>
 </body>
 </html>
