--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@ Framework DevPortal and ensuring the website complied
 
 <p>Email<div>jackcolin@gmail.com</div></p>  
 <p>Website<div>Resume</div></p>        
-<p>GitHub<div>github.com/corinagum</div></p>
-<p>LinkedIn<div>linkedin.com/corniagum</div>    
+<p>GitHub<div>github.com/jackcollins</div></p>
+<p>LinkedIn<div>linkedin.com/jackcollins</div>    
 <h4>Refrences</h4>
+<p>Chris Mullins</p>
     
 
 
