--- a/index.html
+++ b/index.html
@@ -93,7 +93,30 @@ Framework DevPortal and ensuring the website complied
 <p>GitHub<div>github.com/jackcollins</div></p>
 <p>LinkedIn<div>linkedin.com/jackcollins</div>    
 <h4>Refrences</h4>
-<p>Chris Mullins</p>
+<p>Noah Smith<div>Senior Director, FUSE labs</div><div>nsmith@gmail.com</div></p>
+<p>Liam Williams<div>Senior Software Engineer</div><div>li.williams@gmail.com</div></p>
+<p>Sara Johnson<div>Senior Designer</div><div>sjohn@gmail.com</div></p>
+<h4>Recognition</h4>
+<p>DevLeague Elevate<div>
+    Hackers Scholarship</div><div>November 2015</div></p>
+<p>LLL Oral Proficiency<div>
+Interview Assessment</div><div>
+Speaking</div><div>
+General Professional</div><div>
+Proficiency, May 2014</div>
+</p>
+<p>Japanese Language<div>
+    Proficiency Test</div><div>
+    Level N2, June 2012</div>
+
+</p>
+<p>
+JASSO Student Exchange<div>
+    Scholarship</div><div>
+September 2011</div>
+
+
+</p>
     
 
 
